# evic-sdk

./: CMakeLists.txt  Makefile
example/new_fw/: Makefile  menu.c  menu.h  settings.c  settings.h
include/: Button.h  Display.h
make/: Base.mk
src/atomizer/: Atomizer.c
src/display/: Display.c
